@@ -1,3 +1,12 @@
+2009-07-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V01-06-17
+	* add 'DaqBaseReader::setRunNumber()' function, and use it in the
+	DaqSource.
+	* the change was suggested by Kurt Bieri to fix the problem where
+	error events generated by the FUShmReader are generated with an
+	invalid run number.
+
 2009-07-02 Emilio Meschi  <emilio.meschi@cern.ch>
 	* tag V01-06-16 (V01-06-15 used by uncharted update of CLHEP)
 	* merge from branch for 3_1_XV01-06-15
